--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 canvas{
 
-  background-blend-mode: color-dodge;
+  background-color: inherit;
   background-size: cover;
   background-attachment: inherit;
   display: flex;
   border: 1px solid white;
 }
 body {
-  background-color: #000;
+
   font-size: 16px;
 
   background-size: cover;
@@ -26,6 +26,15 @@ p{
 .mainContainer{
   display: flex;
 
+
+}
+#starfield {
+    width:100%;
+    height:100%;
+    z-index: -1;
+    position: absolute;
+    left: 0px;
+    top: 0px;
 }
 .instructions{
   border: 1px solid white;
